# rainstorm-paint

./: .gitignore  Cargo.toml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/canvas/: Cargo.toml
crates/canvas/src/: canvas.rs  color.rs  lib.rs
crates/foundation/: Cargo.toml
crates/foundation/src/: geometry.rs
crates/foundation/src/geometry/: point.rs  rectangle.rs
crates/input/: Cargo.toml
crates/input/src/: gestures.rs  input_view.rs  lib.rs  tablet.rs
crates/input/src/gestures/: input_view.rs
crates/rainstorm/: Cargo.toml
crates/rainstorm/src/: main.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs  screens.rs  ui.rs  widgets.rs
crates/ui/src/screens/: canvas_screen.rs  home_screen.rs
crates/ui/src/widgets/: canvas_widget.rs  temp.wgsl
crates/ui/src/widgets/canvas_widget/: canvas_pipeline.rs  temp.wgsl
crates/ui/src/widgets/canvas_widget/canvas_pipeline/: canvas_texture.rs  vertex.rs
lib/canvas/: Cargo.toml
lib/canvas/src/: brush.rs  canvas.rs  color.rs  lib.rs
lib/canvas/src/brush/: stroke.rs
lib/input/: Cargo.toml
lib/input/src/: lib.rs  macos.rs
lib/tauri-plugin-canvas/: Cargo.toml  README.md  package.json
lib/tauri-plugin-canvas/examples/tauri-app/: package.json
lib/tauri-plugin-canvas/examples/tauri-app/src/: App.svelte
lib/tauri-plugin-canvas/examples/tauri-app/src-tauri/: Cargo.toml
lib/tauri-plugin-canvas/examples/tauri-app/src-tauri/capabilities/: default.json
lib/tauri-plugin-canvas/examples/tauri-app/src-tauri/src/: lib.rs
lib/tauri-plugin-canvas/guest-js/: index.ts
lib/tauri-plugin-canvas/permissions/autogenerated/: reference.md
lib/tauri-plugin-canvas/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  plugin.rs  utils.rs
lib/tauri-plugin-canvas/src/plugin/: renderer.rs
lib/tauri-plugin-canvas/src/plugin/renderer/: texture.rs  vertex.rs
rainstorm/: Cargo.toml
src/: app.css  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: appstate.rs  event_handler.rs  input.rs  lib.rs  main.rs  pipeline.rs
src-tauri/src/event_handler/: canvas_input.rs
src-tauri/src/input/: canvas_input.rs
src-tauri/src/pipeline/: texture.rs  viewport.rs
src/lib/components/: Button.svelte  Canvas.svelte  Titlebar.svelte  Toolbar.svelte
src/lib/components/Workspace/: Canvas.svelte  ColorWheel.svelte  Toolbar.svelte  ToolbarButton.svelte
src/lib/components/Workspace/canvas/: toolStrategies.svelte.ts
src/lib/components/Workspace/color-wheel/: utils.svelte.ts
src/lib/components/canvas/: canvas.svelte.ts  canvas.ts
src/lib/context/: toolContext.ts
src/lib/state/: AppState.svelte.ts
src/lib/utils/: color.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/workspace/: +page.svelte
