[package]
name = "input"
version = "0.1.0"
edition = "2024"

[dependencies]
objc2 = "0.6.1"
objc2-app-kit = { version = "0.3.1", default-features = false, features = [
    "NSView",
    "NSWindow",
    "NSResponder",
    "NSGestureRecognizer",
    "NSMagnificationGestureRecognizer",
    "NSEvent",
    "objc2-core-foundation",
] }
objc2-foundation = "0.3.1"
objc2-core-foundation = "0.3.1"
objc2-core-graphics = "0.3.1"
tokio = { version = "1.46.1", features = ["full"] }
