[package]
name = "ui"
version = "0.1.0"
edition = "2024"

[lib]
name = "ui"
path = "src/ui.rs"

[dependencies]
canvas = { workspace = true }
iced = { version = "0.13.1", features = ["default", "advanced", "image"] }
iced_wgpu = "0.13.1"
iced_core = "0.13.2"
bytemuck = { version = "1.16", features = ["derive"] }
