[package]
name = "ui"
version = "0.1.0"
edition = "2024"

[lib]
name = "ui"
path = "src/ui.rs"

[dependencies]
canvas = { workspace = true }
iced = { version = "0.14.0-dev", features = [
    "default",
    "advanced",
    "image",
    "debug",
] }
bytemuck = { version = "1.16", features = ["derive"] }
glam = "0.30.4"
