[package]
name = "tauri-plugin-canvas"
version = "0.1.0"
authors = ["You"]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-canvas"

[dependencies]
canvas = { workspace = true }
glam = { workspace = true }
tauri = { version = "2.9.5" }
tauri-runtime-wry = "2.9.3"
bytemuck = "1.24.0"
wgpu = "27"
anyhow = { workspace = true }
tauri-runtime = "2.9.2"
serde = "1.0"
thiserror = "2"
sysinfo = "0.37"


[build-dependencies]
tauri-plugin = { version = "2.5.2", features = ["build"] }
